Bug 27980 - XML missing type id
Summary: XML missing type id
Status: RESOLVED FIXED
Alias: None
Product: libabigail
Classification: Unclassified
Component: default (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Dodji Seketeli
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-14 14:37 UTC by gprocida
Modified: 2021-08-13 06:53 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed: 2021-06-17 00:00:00


Attachments
compressed library file (1.30 MB, application/gzip)
2021-06-14 14:37 UTC, gprocida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gprocida 2021-06-14 14:37:34 UTC
Created attachment 13493 [details]
compressed library file

This appears to be a recent regression.

I've bisected this to

[ed87d0a29b97ca991db398ceafaa6012e28db6c8] reader: Canonicalizing a type once is enough

With the attached library:

$ build/tools/abidw ~/dev/libabigail/b190554910/libc.so > /tmp/z.xml && build/tools/abidiff /tmp/z.xml /tmp/z.xml
abidiff: ../../src/abg-reader.cc:1366: abigail::ir::type_base_sptr abigail::xml_reader::read_context::build_or_get_type_decl(const string&, bool): Assertion `__abg_cond__' failed.
Aborted
Comment 1 Dodji Seketeli 2021-06-17 08:24:40 UTC
Looking into this ...
Comment 2 Dodji Seketeli 2021-06-18 14:36:34 UTC
This should be fixed by commit https://sourceware.org/git/?p=libabigail.git;a=commit;h=e2e253e5b1fbf1de3348c276066e67629692d7b7.
Comment 3 gprocida 2021-08-13 06:53:17 UTC
Confirmed fixed.